--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -12,8 +12,8 @@
         android:layout_height="0dp"
         android:layout_marginStart="36dp"
         android:layout_marginTop="40dp"
+        android:text="Review"
         android:textSize="20sp"
-        android:text="Don't Forget List"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
