--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -19,7 +19,6 @@
         android:autoText="false"
         android:maxWidth="300dp"
         android:paddingLeft="10dp"
-        android:text="LOOOOOOOOOOOOOOOooooong"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:paddingLeft="10dp"
-        android:text="Author Name goes here"
+        android:text="Author"
         android:textSize="18dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/postDate" />
@@ -64,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:paddingLeft="10dp"
-        android:text="content goes here very long content"
+        android:text="content"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -78,7 +77,7 @@
         android:layout_marginTop="48dp"
         android:checked="false"
         android:minHeight="48dp"
-        android:text="reminders"
+        android:text="review"
         android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
