--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -31,7 +31,7 @@
         android:layout_marginEnd="98dp"
         android:layout_marginBottom="14dp"
         android:text="Things to Review Today"
-        android:textColor="#5C6BC0"
+        android:textColor="@color/colorBlue"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -59,8 +59,9 @@
         android:id="@+id/edit_profile_btn"
         android:layout_width="120dp"
         android:layout_height="44dp"
-        android:backgroundTint="@color/blue_a100"
+        android:backgroundTint="@color/blue"
         android:text="Edit profile"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.945"
@@ -105,6 +106,7 @@
         android:backgroundTint="#03A9F4"
         android:minHeight="48dp"
         android:src="@drawable/ic_baseline_chat_24"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.955"
