--- a/app/src/main/res/layout/fragment_profile_edit1.xml
+++ b/app/src/main/res/layout/fragment_profile_edit1.xml
@@ -17,19 +17,21 @@
         android:text="Username"
         app:layout_constraintBottom_toTopOf="@+id/save"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/save"
-        android:layout_width="404dp"
+        android:layout_width="200dp"
         android:layout_height="0dp"
         android:layout_marginBottom="399dp"
-        android:backgroundTint="#2196F3"
+        android:backgroundTint="@color/blue"
+        android:textColor="@color/white"
         android:text="save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/eUsername" />
 
