--- a/app/src/main/res/layout/fragment_search_group.xml
+++ b/app/src/main/res/layout/fragment_search_group.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorAccent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,6 +29,7 @@
                 android:id="@+id/search_type"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:background="#B9E3E1"
                 android:entries="@array/search_type" />
 
             <SearchView
@@ -40,7 +41,8 @@
                 android:layout_marginEnd="5dp"
                 android:layout_marginBottom="5dp"
                 android:background="@color/background"
-                android:elevation="10dp">
+                android:elevation="10dp"
+                android:backgroundTint="#B9E3E1">
 
             </SearchView>
         </LinearLayout>
@@ -59,6 +61,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="#B9E3E1"
                 android:entries="@array/sort_order"
                 android:minHeight="48dp" />
 
@@ -67,7 +70,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@android:drawable/spinner_background"
+                android:background="@color/colorBlue"
+                android:textColor="@color/white"
                 android:text="Filter"
                 android:textSize="20sp"
                 app:icon="@drawable/filter"
