--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -5,5 +5,6 @@
         <item>@font/cabin</item>
         <item>@font/open_sans</item>
         <item>@font/open_sans_light</item>
+        <item>@font/open_sans_semibold</item>
     </array>
 </resources>
