login: username to email, profile background color, not image now. Things to review centered

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,7 +33,7 @@
     <color name="colorTitle">#ffffff</color>
     <color name="colorLightGray">#ECECEC</color>
     <color name="colorGray">#dedede</color>
-    <color name="colorDarkGray">#b4b4b4</color>
+    <color name="colorDarkGray">#535353</color>
     <color name="colorBlue">#2C3F74</color>
     <color name="blue">#1E557E</color>
     <color name="palelilac">#D6C9C9</color>
