--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="112dp"
         android:scaleType="fitXY"
-        android:src="@drawable/profileheader" />
+        android:background="@color/colorPrimary"/>
 
     <FrameLayout
         android:id="@+id/frameLayout"
@@ -30,7 +30,8 @@
         android:layout_marginStart="98dp"
         android:layout_marginEnd="98dp"
         android:layout_marginBottom="14dp"
-        android:text="Things to Review Today"
+        android:text="Things to Review"
+        android:textAlignment="center"
         android:textColor="@color/colorBlue"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -74,7 +75,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="left"
-        android:text="username"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/numgroupsjoined"
