--- a/app/src/main/res/layout/activity_after_register.xml
+++ b/app/src/main/res/layout/activity_after_register.xml
@@ -17,6 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
+
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="289dp"
@@ -85,15 +86,28 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
+<!--    <ImageView-->
+<!--        android:id="@+id/avatar"-->
+<!--        android:layout_width="177dp"-->
+<!--        android:layout_height="166dp"-->
+<!--        android:layout_marginBottom="24dp"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/welcome_label"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintHorizontal_bias="0.495"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        tools:srcCompat="@drawable/account" />-->
+
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/avatar"
         android:layout_width="177dp"
         android:layout_height="166dp"
         android:layout_marginBottom="24dp"
+        android:background="@drawable/imageview_white_border"
+        android:padding="5dp"
+        android:src="@drawable/account"
         app:layout_constraintBottom_toTopOf="@+id/welcome_label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:srcCompat="@drawable/account" />
+        app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
