--- a/app/src/main/res/layout/activity_after_register.xml
+++ b/app/src/main/res/layout/activity_after_register.xml
@@ -63,11 +63,11 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="28dp"
         android:ems="10"
-        android:hint="@string/username"
-        android:textColorHint="@color/deepspace"
+        android:hint="@string/username_hint"
         android:inputType="textPersonName"
-        android:textColor="@color/white"
         android:minHeight="48dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/deepspace"
         app:layout_constraintBottom_toTopOf="@+id/nickname_confirm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
