--- a/app/src/main/res/layout/fragment_profile_edit1.xml
+++ b/app/src/main/res/layout/fragment_profile_edit1.xml
@@ -6,12 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".ui.profile.ProfileFragment">
 
+    <Button
+        android:id="@+id/upload"
+        android:layout_width="200dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="12dp"
+        android:backgroundTint="@color/blue"
+        android:text="upload"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@+id/imageName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/image" />
+
     <EditText
         android:id="@+id/eUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="145dp"
-        android:layout_marginBottom="96dp"
+        android:layout_width="170dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="61dp"
         android:ems="10"
         android:inputType="textPersonName"
         android:text="Username"
@@ -19,20 +32,50 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageName" />
 
     <Button
         android:id="@+id/save"
         android:layout_width="200dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="399dp"
+        android:layout_marginBottom="210dp"
         android:backgroundTint="@color/blue"
-        android:textColor="@color/white"
         android:text="save"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/eUsername" />
+
+    <EditText
+        android:id="@+id/imageName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="62dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="image name:"
+        app:layout_constraintBottom_toTopOf="@+id/eUsername"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/upload" />
+
+    <FrameLayout
+        android:id="@+id/image"
+        android:layout_width="193dp"
+        android:layout_height="96dp"
+        android:layout_marginTop="39dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageToUpload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:src="@tools:sample/avatars" />
+    </FrameLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
