--- a/app/src/main/res/layout/group_listview_row.xml
+++ b/app/src/main/res/layout/group_listview_row.xml
@@ -3,13 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="5dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginTop="3dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginBottom="3dp"
     android:background="@android:color/white"
     android:descendantFocusability="blocksDescendants"
+    android:elevation="5dp"
     android:orientation="vertical"
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
-    android:backgroundTint="#C3F3F0">
+    android:paddingBottom="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,6 +30,10 @@
             android:clickable="false"
             android:focusable="false"
             android:focusableInTouchMode="false"
+            android:shadowColor="@color/colorDarkGray"
+            android:shadowDx="3"
+            android:shadowDy="3"
+            android:shadowRadius="3"
             android:text="Group Title"
             android:textColor="@color/blue"
             android:textSize="24sp" />
@@ -49,7 +57,7 @@
             android:focusable="false"
             android:focusableInTouchMode="false"
             android:text="group tags"
-            android:textColor="@color/deepspace"/>
+            android:textColor="@color/deepspace" />
     </LinearLayout>
 
     <TextView
