--- a/app/src/main/res/layout/chat_row.xml
+++ b/app/src/main/res/layout/chat_row.xml
@@ -5,7 +5,14 @@
     android:id="@+id/big_cons_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp">
+    android:layout_marginLeft="5dp"
+    android:layout_marginTop="3dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginBottom="3dp"
+    android:background="@color/white"
+    android:elevation="5dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/chatAvatar"
