--- a/app/src/main/res/layout/fragment_search_group.xml
+++ b/app/src/main/res/layout/fragment_search_group.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorAccent">
+    android:background="@color/g1"
+    android:foregroundTint="@color/background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,65 +20,82 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
             android:layout_marginRight="10dp"
-            android:layout_marginBottom="5dp"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:background="@color/g2"
+            android:elevation="5dp"
+            android:orientation="vertical"
+            android:paddingBottom="8dp">
 
-            <Spinner
-                android:id="@+id/search_type"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="#B9E3E1"
-                android:entries="@array/search_type" />
-
-            <SearchView
-                android:id="@+id/search_keywords"
-                android:layout_width="fill_parent"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="5dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginEnd="5dp"
+                android:layout_marginRight="10dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/background"
-                android:elevation="10dp"
-                android:backgroundTint="#B9E3E1">
+                android:layout_weight="1"
+                android:orientation="horizontal">
 
-            </SearchView>
+                <SearchView
+                    android:id="@+id/search_keywords"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"
+                    android:background="@color/background"
+                    android:elevation="5dp">
+
+                </SearchView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="66dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <Spinner
+                    android:id="@+id/search_type"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="5dp"
+                    android:background="@color/g1"
+                    android:elevation="5dp"
+                    android:entries="@array/search_type"
+                    android:foregroundTint="#FFFFFF" />
+
+                <Spinner
+                    android:id="@+id/spn_ranking"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginRight="3dp"
+                    android:layout_weight="1"
+                    android:background="@color/deepspace"
+                    android:elevation="5dp"
+                    android:entries="@array/sort_order"
+                    android:minHeight="48dp" />
+
+                <Button
+                    android:id="@+id/btn_filter"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@color/colorBlue"
+                    android:text="Filter"
+                    android:textColor="@color/white"
+                    android:textSize="20sp"
+                    app:icon="@drawable/filter"
+                    app:iconSize="32dp" />
+
+            </LinearLayout>
+
         </LinearLayout>
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="66dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_weight="1"
-            android:orientation="horizontal">
-
-            <Spinner
-                android:id="@+id/spn_ranking"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#B9E3E1"
-                android:entries="@array/sort_order"
-                android:minHeight="48dp" />
-
-            <Button
-                android:id="@+id/btn_filter"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@color/colorBlue"
-                android:textColor="@color/white"
-                android:text="Filter"
-                android:textSize="20sp"
-                app:icon="@drawable/filter"
-                app:iconSize="32dp" />
-
-        </LinearLayout>
 
         <ListView
             android:id="@+id/search_result_list"
