--- a/app/src/main/res/layout/fragment_post.xml
+++ b/app/src/main/res/layout/fragment_post.xml
@@ -19,6 +19,9 @@
         android:autoText="false"
         android:maxWidth="300dp"
         android:paddingLeft="10dp"
+        android:shadowColor="@color/colorDarkGray"
+        android:shadowDx="3"
+        android:shadowDy="3"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,6 +35,7 @@
         android:paddingLeft="10dp"
         android:text="Author"
         android:textSize="18dp"
+        android:textStyle="italic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/postDate" />
 
@@ -61,7 +65,11 @@
         android:id="@+id/postContentTV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="16dp"
+        android:layout_marginRight="10dp"
+        android:background="@color/white"
+        android:elevation="5dp"
         android:paddingLeft="10dp"
         android:text="content"
         android:textSize="20dp"
